--- a/packages/cms/src/components/editors/components/FooterButtons.css
+++ b/packages/cms/src/components/editors/components/FooterButtons.css
@@ -10,6 +10,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 4; /* in front of js editor */
   /* sizing */
   width: 100%;
   height: 2.5rem;
