--- a/packages/cms/src/components/variables/ConsoleVariable.css
+++ b/packages/cms/src/components/variables/ConsoleVariable.css
@@ -55,7 +55,6 @@
 .cms-variable-editor-group {
   display: flex;
   min-height: 50vh;
-  margin-bottom: var(--gutter-md);
 
   /* needed for ace editor */
   & > .cms-variable-editor-js {
